--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -2,6 +2,11 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+body {
+    background-color: grey;
 }
 
 img {
@@ -18,11 +23,6 @@ ul, li, ol, menu {
 a {
     text-decoration: none;
     color: currentColor;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
 }
 
 .btn {
