--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -31,7 +31,7 @@ a {
 }
 
 .btn {
-  min-width: 130px;
+  min-width: 60px;
   height: 40px;
   color: #fff;
   padding-left: 2rem;
@@ -51,7 +51,7 @@ a {
 }
 .btn:hover {
   color: #fff;
-  border-color: #DB202B;
+  border-color: #db202b;
 }
 .btn:hover:after {
   width: 100%;
@@ -69,23 +69,27 @@ a {
 }
 
 .btn_round {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(42, 42, 42, 0.6);
-    cursor: pointer;
-    padding: 0.8rem;
-    user-select: none;
-    border-radius: 50%;   
-    color: white;
-    border: 2px solid rgba(255, 255, 255, 0.6); /* Bordo bianco opacizzato */
-    transition: background-color 0.3s, border-color 0.3s; /* Transizione per l'hover */
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(42, 42, 42, 0.6);
+  cursor: pointer;
+  padding: 0.8rem;
+  user-select: none;
+  border-radius: 50%;
+  color: white;
+  border: 2px solid rgba(255, 255, 255, 0.6); /* Bordo bianco opacizzato */
+  transition: background-color 0.3s, border-color 0.3s; /* Transizione per l'hover */
 }
 
 .btn_round:hover {
-    background-color: rgba(107, 107, 107, 0.8); /* Background più chiaro al hover */
-    border-color: rgba(255, 255, 255, 0.9); /* Bordo più chiaro al hover */
+  background-color: rgba(
+    107,
+    107,
+    107,
+    0.8
+  ); /* Background più chiaro al hover */
+  border-color: rgba(255, 255, 255, 0.9); /* Bordo più chiaro al hover */
 }
-
