--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -36,7 +36,7 @@ a {
   color: #fff;
   padding-left: 2rem;
   padding-right: 2.4rem;
-  font-weight: bold;
+  font-weight: 500;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
@@ -46,12 +46,11 @@ a {
   z-index: 0;
   background: #fff;
   overflow: hidden;
-  border: 2px solid #141414;
+  border: 0px;
   color: #141414;
 }
 .btn:hover {
   color: #fff;
-  border-color: #db202b;
 }
 
 
@@ -94,4 +93,42 @@ a {
     0.8
   ); /* Background più chiaro al hover */
   border-color: rgba(255, 255, 255, 0.9); /* Bordo più chiaro al hover */
+}
+
+.btn_info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  background-color: rgba(109, 109, 110, 0.7);
+  color: white;
+  border: 0px;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 1;
+  min-width: 60px;
+  height: 40px;
+  padding-left: 2rem;
+  padding-right: 2.4rem;
+  transition: all 0.3s ease;
+
+}
+.info_icon {
+  font-size: 16px;
+}
+
+.btn_info:hover {
+  background-color: rgba(109, 109, 110, 0.38);
+
+}
+
+.circle {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.1s;
 }
