--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -120,11 +120,22 @@ a {
   border: medium none;
   text-decoration: none;
   cursor: pointer;
-  padding-left: 2rem;
-  padding-right: 2.4rem;
-  height: 100%;
+  padding: 10px ;
   display: flex;
   gap: 15px;
   align-items: center;
   justify-content: center;
+  border-radius: 30px;
+  color: rgba(24, 24, 24);
+
+
+  span {
+    font-size: 18px;
+    color: rgba(24, 24, 24);
+
+  }
+}
+
+.modal_btn:hover {
+  background-color: #6666662d;
 }
